# aios

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  iso.yml
crates/aios-agent/: Cargo.toml
crates/aios-agent/src/: audit.rs  config.rs  main.rs  router.rs  server.rs  state.rs  tool_executor.rs
crates/aios-agent/src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs  system_prompt.rs  types.rs
crates/aios-chat/: Cargo.toml
crates/aios-chat/src/: app.rs  ipc_client.rs  main.rs  state.rs  theme.rs
crates/aios-chat/src/views/: chat_view.rs  input_bar.rs  message_bubble.rs  mod.rs  oobe.rs  tool_card.rs
crates/aios-common/: Cargo.toml
crates/aios-common/src/: audit.rs  error.rs  lib.rs
crates/aios-common/src/ipc/: mod.rs  protocol.rs  transport.rs
crates/aios-common/src/types/: config.rs  message.rs  mod.rs  tool.rs  trust.rs
crates/aios-confirm/: Cargo.toml
crates/aios-confirm/src/: app.rs  main.rs  theme.rs
crates/aios-confirm/src/views/: confirm_dialog.rs  critical_dialog.rs  mod.rs  waiting_view.rs
crates/aios-dock/: Cargo.toml
crates/aios-dock/src/: app.rs  launcher.rs  main.rs  theme.rs
crates/aios-dock/src/views/: app_icon.rs  dock_bar.rs  mod.rs  system_tray.rs
crates/aios-mcp/: Cargo.toml
crates/aios-mcp/src/: chrome_mcp.rs  executor.rs  lib.rs  registry.rs
crates/aios-mcp/src/tools/: brightness.rs  file_delete.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  mod.rs  open_url.rs  shell_exec.rs  system_info.rs  volume.rs  wifi_connect.rs  wifi_list.rs
crates/aios-mcp/src/tools/browser/: click.rs  find_element.rs  get_page_text.rs  mod.rs  navigate.rs  read_page.rs  screenshot.rs  type_text.rs
crates/aios-memory/: Cargo.toml
crates/aios-memory/src/: lib.rs
crates/aios-settings/: Cargo.toml
crates/aios-settings/src/: app.rs  commands.rs  main.rs  theme.rs
crates/aios-settings/src/views/: ai.rs  display.rs  mod.rs  network.rs  ollama.rs  sidebar.rs
crates/aios-voice/: Cargo.toml
crates/aios-voice/src/: lib.rs
iso/: Dockerfile  Dockerfile.build  build-iso.sh
iso/config/auto/: config
iso/config/hooks/live/: 01-setup-greetd.hook.chroot  02-setup-sway.hook.chroot  03-setup-pipewire.hook.chroot  04-create-user.hook.chroot  05-setup-aios-dirs.hook.chroot  06-setup-ollama.hook.chroot
iso/config/includes.chroot/etc/chromium/policies/managed/: aios-policy.json
iso/config/includes.chroot/etc/skel/.config/foot/: foot.ini
iso/config/includes.chroot/usr/lib/systemd/user/: aios-agent.service  aios-chat.service  aios-confirm.service  aios-dock.service  aios.target
iso/config/includes.chroot/usr/share/applications/: aios-chat.desktop  aios-dock.desktop
iso/config/package-lists/: aios.list.chroot
specs/: AIOS-spec-2026-02-20.md  plan-2026-02-20.md  research-summary-2026-02-20.md
swarm-report/: aios-mvp-2026-02-21.md  aios-mvp-e2e-scenario.md
