[workspace]
resolver = "2"
members = [
    "crates/aios-common",
    "crates/aios-agent",
    "crates/aios-chat",
    "crates/aios-dock",
    "crates/aios-confirm",
    "crates/aios-mcp",
    "crates/aios-memory",
    "crates/aios-voice",
    "crates/aios-settings",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
iced = { version = "0.14", features = ["tokio", "markdown", "highlighter"] }
