[package]
name = "aios-confirm"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aios-confirm"
path = "src/main.rs"

[dependencies]
aios-common = { path = "../aios-common" }
iced.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
