[package]
name = "aios-dock"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aios-dock"
path = "src/main.rs"

[dependencies]
aios-common = { path = "../aios-common" }
iced.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
