[package]
name = "aios-settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aios-settings"
path = "src/main.rs"

[dependencies]
aios-common = { path = "../aios-common" }
iced.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
dirs = "6.0"
